@@ -1,6 +1,6 @@
 #
 # 00default.rb: default plugins 
-# $Revision: 1.82 $
+# $Revision: 1.83 $
 #
 # Copyright (C) 2001-2005, TADA Tadashi <sho@spc.gr.jp>
 # You can redistribute it and/or modify it under GPL2.
@@ -359,9 +359,9 @@ def my( a, str, title = nil )
 	date, noise, frag = a.scan( /^(\d{4}|\d{6}|\d{8}|\d{8}-\d+)([^\d]*)?#?([pct]\d+)?$/ )[0]
 	anc = frag ? "#{date}#{frag}" : date
 	if title then
-		%Q[<a href="#{@index}#{anchor anc}" title="#{title}">#{str}</a>]
+		%Q[<a href="#{@conf.base_url + @index.sub(%r|^\./|, '')}#{anchor anc}" title="#{title}">#{str}</a>]
 	else
-		%Q[<a href="#{@index}#{anchor anc}">#{str}</a>]
+		%Q[<a href="#{@conf.base_url + @index.sub(%r|^\./|, '')}#{anchor anc}">#{str}</a>]
 	end
 end
 
